[gd_scene load_steps=2 format=3 uid="uid://ca23dreet0qr2"]

[ext_resource type="Script" path="res://multiplayer_template/menu/debug_menu/debug_sub_menus/lobby_debug_sub_menu.gd" id="1_67oah"]

[node name="LobbyDebugSubMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_67oah")
menu_name = "lobby"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="NameInput" type="LineEdit" parent="VBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Totally new name"

[node name="SetLobbyName" type="Button" parent="VBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Set Lobby Name"

[node name="Back" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="VBoxContainer/VBoxContainer2/SetLobbyName" to="." method="_on_set_lobby_name_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_back_pressed"]
